ros2_ws/log/build_2025-11-08_20-31-54/v1_topic_pkg/stderr.log
  File "/home/bachelor/ros2_ws/install/v1_topic_pkg/lib/python3.12/site-packages/v1_topic_pkg/laser_data_subscriber.py", line 12
    self-laser_data=[]
    ^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?

